testing fix for hero image on ios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
 /* Set up style for header and navigation */
 
 header {
-    background-image: url("../images/herobg.png");
+    background: url("../images/herobg.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
@@ -84,7 +84,7 @@ header nav ul li a:hover {
 /* Set up Style for Hero Image and Quote */
 
 .hero {
-    background-image: url(../images/herobg.png);
+    background: url(../images/herobg.png);
     background-size: cover;
     background-attachment: fixed;
     background-position: 80%;
@@ -359,6 +359,7 @@ section.project-name {
 
     header nav ul li {
         padding: 0;
+        text-shadow: none;
     }
 
     header nav ul li a {
